@@ -43,7 +43,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
  * Tests {@link io.helidon.webserver.staticcontent.FileSystemContentHandler}.
  */
 @ExtendWith(TemporaryFolderExtension.class)
-public class FileSystemContentHandlerTest {
+class FileSystemContentHandlerTest {
 
     private TemporaryFolder folder;
 
@@ -51,15 +51,15 @@ public class FileSystemContentHandlerTest {
     public void createContent() throws IOException {
         // root
         Path root = folder.root().toPath();
-        Files.write(root.resolve("index.html"), "Index HTML".getBytes(StandardCharsets.UTF_8));
-        Files.write(root.resolve("foo.txt"), "Foo TXT".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(root.resolve("index.html"), "Index HTML");
+        Files.writeString(root.resolve("foo.txt"), "Foo TXT");
         // css
         Path cssDir = folder.newFolder("css").toPath();
-        Files.write(cssDir.resolve("a.css"), "A CSS".getBytes(StandardCharsets.UTF_8));
-        Files.write(cssDir.resolve("b.css"), "B CSS".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(cssDir.resolve("a.css"), "A CSS");
+        Files.writeString(cssDir.resolve("b.css"), "B CSS");
         // bar
         Path other = folder.newFolder("other").toPath();
-        Files.write(other.resolve("index.html"), "Index HTML".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(other.resolve("index.html"), "Index HTML");
     }
 
     static String responseToString(TestResponse response)
@@ -71,8 +71,7 @@ public class FileSystemContentHandlerTest {
     }
 
     @Test
-    public void serveFile() throws Exception {
-        try {
+    void serveFile() throws Exception {
         Routing routing = Routing.builder()
                                  .register("/some", StaticContentSupport.create(folder.root().toPath()))
                                  .build();
@@ -105,13 +104,10 @@ public class FileSystemContentHandlerTest {
                 .path("/some/css/")
                 .get();
         assertThat(response.status(), is(Http.Status.NOT_FOUND_404));
-        } catch(Throwable ex){
-            ex.printStackTrace();
-        }
     }
 
     @Test
-    public void serveIndex() throws Exception {
+    void serveIndex() throws Exception {
         Routing routing = Routing.builder()
                 .register(StaticContentSupport.builder(folder.root().toPath())
                                               .welcomeFileName("index.html")
